style.css
:root {
  --tile-size: min(5rem, 6vmin);

  --background-color: hsl(0, 0%, 0%);
  --tile-color: hsl(0, 0%, 10%);
  --tile-border-color: hsl(0, 0%, 7%);
  --text-color: #eee;
  --v1: deepskyblue;
  --v2: lime;
  --v3: gold;
  --v4: hsl(345, 90%, 60%);
  --v5: darkorange;
  --v6: magenta;
  --v7: deeppink;
  --v8: wheat;
}

* {
  box-sizing: border-box;
}

html,
body {
  height: 100%;
}

body {
  display: flex;
  flex-flow: column nowrap;
  place-items: center;
  margin: 0 auto;
  font-family: system-ui, sans-serif;
  font-size: 2rem;
  background: no-repeat,
    center/cover url("public/topography.svg") var(--background-color);
  color: var(--text-color);
}
h1 {
  position: relative;
  margin: 1em;
  text-align: center;
}
h1 img {
  width: 1em;
  position: relative;
  top: 0.09em;
}

.board {
  display: grid;
  grid-template-columns: repeat(var(--size, 12), var(--tile-size));
  grid-template-rows: repeat(var(--size, 12), var(--tile-size));
  gap: 4px;
}

.board > * {
  display: grid;
  place-content: center;
  border: 2px solid var(--tile-border-color);
  user-select: none;
  font: bold 1.8em monospace;
  background: url("public/tile.svg") var(--tile-color);
}

[data-status="hidden"] {
  cursor: pointer;
}

[data-status="number"] {
  background: unset;
}

[data-status="mine"] {
  background: no-repeat center/cover url("public/mine.svg");
}
[data-status="marked"] {
  position: relative;
}
[data-status="marked"]::before {
  content: "";
  position: absolute;
  inset: 0;
  background: no-repeat center/cover url("public/flag.svg");
}

